<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_iv_diaper_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/diaper_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_diaper_icon"
        tools:ignore="ImageContrastCheck" />

    <RadioGroup
        android:id="@+id/main_r_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/main_rb_dry"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_iv_diaper_icon"
        app:layout_constraintVertical_bias="0.050000012">

        <RadioButton
            android:id="@+id/main_rb_dirty"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_dirty_text"
            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck,VisualLintBounds" />

        <RadioButton
            android:id="@+id/main_rb_wet"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_wet_text"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/main_rb_dry"
            style="@style/font_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_dry_text"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <EditText
        android:id="@+id/main_et_time"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/time_hint_text"
        android:inputType="time"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="@color/black_coral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_r_group"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/main_btn_add"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/melon"
        android:text="@string/button_add_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_et_time"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/main_btn_clear"
        style="@style/font_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/melon"
        android:text="@string/button_clear_all"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btn_add"
        app:layout_constraintTop_toTopOf="@+id/main_btn_add" />

    <TextView
        android:id="@+id/main_tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:textAppearance="@style/font_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_add"
        app:layout_constraintVertical_bias="0.050000012" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_tv_diaper_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_header"
        app:layout_constraintVertical_bias="0.050000012">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/baby_description"
                app:srcCompat="@drawable/ic_baby_icon" />

            <TextView
                android:id="@+id/main_tv_diaper_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_diaper_changes"
                android:textAlignment="center"
                android:textAppearance="@style/font_style"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/baby_description"
                app:srcCompat="@drawable/ic_baby_icon" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/main_tv_diaper_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/font_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>